# MADS-ML-FloridoM-Eindopdracht

./: .gitignore  RAPPORT.md  README.md  create_class_heatmap_e11_e17.py  create_overview_heatmap.py  dutch_rapport.md  main.py  pyproject.toml
experiments/combined/08_pca_trigram/20260202-120258/: events.out.tfevents.1770030178.Floridos-MacBook-Pro.local.66766.2  results.json
experiments/combined/09_advanced_pca_trigram/20260202-122505/: events.out.tfevents.1770031505.Floridos-MacBook-Pro.local.67177.2  results.json
experiments/dutch/08_pca_trigram/20260202-114807/: events.out.tfevents.1770029287.Floridos-MacBook-Pro.local.65867.0
experiments/dutch/08_pca_trigram/20260202-115122/: events.out.tfevents.1770029482.Floridos-MacBook-Pro.local.66252.0
experiments/dutch/08_pca_trigram/20260202-120045/: events.out.tfevents.1770030045.Floridos-MacBook-Pro.local.66766.0  results.json
experiments/roberta/08_pca_trigram/20260202-114944/: events.out.tfevents.1770029384.Floridos-MacBook-Pro.local.65867.1  results.json
src/: __init__.py  models.py  training.py  vectorizers.py  visualize.py
src/experiments/: README.md  __init__.py  e01_baseline_mean.py  e02_attention.py  e03_bilstm.py  e04_highway.py  e05_moe.py  e06_rare_classes.py  e07_balanced_classes.py  e08_pca_trigram.py  e09_advanced_pca_trigram.py  e10_adaptive_chunks.py  e11_hypertuning.py  e12_final_model.py  e13_aggressive_oversample.py  e14_focal_loss.py  e15_threshold_optimization.py  e16_threshold_tuning.py  e17_ultimate.py
src/loaders/: README.md  __init__.py  combined.py  legal_dutch.py  legal_roberta.py
(+2 files in other folders)
